--- a/notes/app/src/main/AndroidManifest.xml
+++ b/notes/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sophie.notes">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".NoteCreate" />
-        <activity android:name=".SetAlarm"></activity>
+        <activity android:name=".SetAlarm" />
+        <activity android:name=".Settings" />
+        <activity android:name=".Info"></activity>
     </application>
 
 </manifest>
